--- a/templates/workshop_info.html
+++ b/templates/workshop_info.html
@@ -116,7 +116,11 @@
     "Society of Manufacturing Engineers",
     "Solar Energy Society of India (Students Chapter)",
     "The Indian Institute of Metals (Students Affiliate Chapter)",
-    "The Institution of Electronics & Telecommunication Engineers (Stu)"
+    "The Institution of Electronics & Telecommunication Engineers (Stu)",
+    " Association of Serious Quizzers",
+"American Society of Mechanical Engineers",
+"Space Centre",
+"Tamil Mandram"
 ];
 
 // Filter Associations
