--- a/templates/workshop_detail.html
+++ b/templates/workshop_detail.html
@@ -233,7 +233,7 @@
             <h3>Speaker Details:</h3>
             <table>
                 <tr>
-                    <th>Name</th>
+                    <th>Name (Speaker 1)</th>
                     <td><input type="text" name="speaker_name" required></td>
                 </tr>
                 <tr>
@@ -248,6 +248,23 @@
                 <tr>
                     <th>E-signature</th>
                     <td><input type="file" name="speaker_signature" accept="image/*,application/pdf"></td>
+                </tr>
+                <tr>
+                    <th>Name (Speaker 2)</th>
+                    <td><input type="text" name="speaker_name_2" required></td>
+                </tr>
+                <tr>
+                    <th>Designation</th>
+                    <td><input type="text" name="speaker_designation_2" required></td>
+                </tr>
+                <tr>
+                    <th>Contact Details</th>
+                    <td><input type="text" name="speaker_contact_2" pattern="\d{10}"
+                            title="Please enter a 10-digit mobile number." required></td>
+                </tr>
+                <tr>
+                    <th>E-signature</th>
+                    <td><input type="file" name="speaker_signature_2" accept="image/*,application/pdf"></td>
                 </tr>
             </table>
 
